# go-oauth-rbac-service

./: .bazelignore  .bazelrc  .env.example  .gitignore  .golangci.yml  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  Taskfile.yaml  WORKSPACE.bazel  docker-compose.yml  go.mod  go.sum
.agent-cache/: final-report.md  mission-plan.md  run-log.md  validation-matrix.json
.githooks/: pre-push
.github/workflows/: ci.yml
api/: openapi.yaml
cmd/api/: BUILD.bazel  README.md  main.go
configs/: mimir.yaml  otel-collector-config.yaml
configs/grafana/dashboards/: api-overview.json  logs-overview.json  trace-overview.json
configs/grafana/jsonnet/dashboards/: logs-overview.jsonnet  trace-overview.jsonnet
configs/grafana/jsonnet/lib/queries/: api.libsonnet  logs.libsonnet  traces.libsonnet
configs/grafana/provisioning/dashboards/: dashboards.yaml
configs/grafana/provisioning/datasources/: datasources.yaml
docs/: diagrams.md  k8s-adoption-plan.md  k8s-rollout-governance.md  metrics-catalog.md  project-guide.md  test-catalog.md  test-gaps.md  test_catalog.md
docs/diagrams/: admin-list-etag-flow.mmd  negative-lookup-cache-flow.mmd  rbac-permission-cache-flow.mmd  route-rate-limit-policy-map-flow.mmd  session-management-flow.mmd
internal/app/: BUILD.bazel  app.go  app_test.go
internal/config/: BUILD.bazel  config.go  config_profile_test.go  metrics.go  metrics_test.go
internal/database/: BUILD.bazel
internal/di/: BUILD.bazel  providers.go  providers_test.go  wire_gen.go
internal/domain/: BUILD.bazel  session.go
internal/health/: BUILD.bazel
internal/http/handler/: BUILD.bazel  admin_handler.go  admin_handler_test.go  auth_handler.go  user_handler.go
internal/http/middleware/: BUILD.bazel  auth_middleware.go  auth_middleware_test.go  rate_limit_middleware.go  rate_limit_middleware_test.go  rbac_middleware.go  rbac_middleware_test.go  security_middleware.go  security_middleware_test.go
internal/http/response/: BUILD.bazel  response.go
internal/http/router/: BUILD.bazel  router.go  router_test.go
internal/observability/: BUILD.bazel  audit.go  logging.go  metrics.go  runtime.go  tracing.go
internal/repository/: BUILD.bazel  pagination_test.go  permission_repository.go  role_repository.go  session_repository.go  session_repository_test.go  user_repository.go
internal/security/: BUILD.bazel  jwt.go
internal/service/: BUILD.bazel  admin_list_cache_redis_test.go  auth_abuse_guard.go  auth_abuse_guard_redis.go  auth_abuse_guard_redis_test.go  auth_service.go  idempotency_store_redis_test.go  interfaces.go  negative_lookup_cache.go  negative_lookup_cache_redis.go  negative_lookup_cache_redis_test.go  negative_lookup_cache_test.go  oauth_service.go  oauth_service_test.go  rbac_permission_cache_store.go  rbac_permission_cache_store_redis.go  rbac_permission_cache_store_redis_test.go  rbac_permission_resolver.go  rbac_permission_resolver_test.go  redis_test_helpers_test.go  session_service.go  token_service.go  token_service_test.go
internal/tools/common/: env.go  env_test.go
internal/tools/loadgen/: BUILD.bazel  command.go  run.go  run_test.go
internal/tools/migrate/: BUILD.bazel  command.go
internal/tools/obscheck/: BUILD.bazel  command.go
internal/tools/seed/: BUILD.bazel  command.go
k8s/: README.md  kind-config.yaml
k8s/base/: kustomization.yaml
k8s/base/deployments/: api.yaml  postgres.yaml  redis.yaml
k8s/overlays/observability-base/deployments/: grafana.yaml  loki.yaml  mimir.yaml
k8s/overlays/prod-like/: kustomization.yaml
k8s/overlays/prod-like/patches/: api-rollout.yaml
k8s/overlays/prod-like/policy/: api-pdb.yaml  postgres-pdb.yaml  redis-pdb.yaml
k8s/overlays/rollouts/blue-green/policy/: api-pdb.yaml
k8s/scripts/: check-rollouts-controller.sh  deploy.sh  image-build-load-kind.sh  rollout-precheck.sh  rollouts.sh  secrets.sh
pkg/validator/: BUILD.bazel
policy/k8s/: cluster_secret_store.rego  external_secret.rego  rollout.rego  workload.rego
scripts/ci/: run_all.sh  run_fuzz_long.sh  run_fuzz_smoke.sh  run_k8s_external_secrets_validate.sh  run_k8s_manifest_validate.sh  run_k8s_policy_check.sh  run_k8s_rollout_precheck_script_check.sh  run_k8s_rollout_validate.sh  run_k8s_secret_stores_validate.sh  run_migration_smoke.sh
taskfiles/: ci.yaml  go.yaml  k8s.yaml
test/integration/: BUILD.bazel  auth_google_oauth_test.go  auth_lifecycle_test.go  health_endpoints_test.go  rate_limit_test.go  rbac_forbidden_test.go  rbac_permission_cache_test.go  redis_race_integration_test.go  session_management_test.go
(+14 files in other folders)
