load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "oauth_account.go",
        "permission.go",
        "role.go",
        "session.go",
        "user.go",
    ],
    importpath = "go-oauth-rbac-service/internal/domain",
    visibility = ["//:__subpackages__"],
)
