load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "router",
    srcs = ["router.go"],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/http/router",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/health",
        "//internal/http/handler",
        "//internal/http/middleware",
        "//internal/http/response",
        "//internal/security",
        "//internal/service",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
    ],
)

go_test(
    name = "router_test",
    srcs = ["router_test.go"],
    embed = [":router"],
    deps = [
        "//internal/health",
        "//internal/security",
        "//internal/service",
    ],
)
