load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "loadgen",
    srcs = [
        "command.go",
        "run.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/tools/loadgen",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/observability",
        "//internal/tools/common",
        "//internal/tools/ui",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "loadgen_test",
    srcs = ["run_test.go"],
    embed = [":loadgen"],
)
